HttpUnit release notes

Known problems:
    1. The "_parent" and "_empty" frame targets are not handled correctly
    2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. HttpUnit does not support JavaScript
    2. JDK 1.2 or higher is now required


Revision History:
30-Jan-2002
Acknkowledgements:
    Thanks to Alex Chaffee for implementing context parameters for web.xml in ServletUnit

Additions:
    1. ServletUnit now supports the <context-param> tag.

24-Jan-2002
Additions:
    1. You can now call HttpUnitOptions.setAutoRedirect( false ) to enable explicit testing of redirect requests.
    2. WebClient now exposes the protected method writeMessageBody to ease implementation of new subclasses

23-Jan-2002
Problems fixed:
    1. Control characters and spaces created by breaking HTML in the middle are now trimmed from link parameters.

21-Jan-2002
Additions:
    1. MessageBodyWebRequest's constructors and inner class are now public, allowing outside code to create new request classes.
    2. ServletUnit now supports creating a RequestDispatcher from ServletContext to forward to other servlets.
       Support for this is rudimentary at present: query parameters on the request dispatcher create are ignored.

17-Jan-2002
Problems fixed:
    1. Link parameters are now sent in the proper order, as long as parameter validation is not turned off.
    2. Parameter validation is now done for requests built from links

15-Jan-2002
Acknowledgements:
    Thanks to Stefan G. Renz for identifying the infinite loop bug in frame handling

Problems fixed:
    1. An infinite loop would result if a frame had the same name as one of its sub-frames

14-Jan-2002

Problems fixed:
    1. Parameters are now submitted in the order specified in the form, as long as parameter validation is not turned off.